[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/leveldata.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/background.png" type="Texture" id=3]
[ext_resource path="res://scenes/ball_titlescreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://themes/breakout_theme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/fade_in.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/gamescreen_label.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 203.483, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.54306, 339.688 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 348.086 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 203.013, 9.4864 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="leveldata" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 216, 385 )
texture = ExtResource( 3 )

[node name="title_borders" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="title_borders"]
position = Vector2( 217.503, 88.4451 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="title_borders"]
position = Vector2( 421.468, 434.103 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="title_borders"]
position = Vector2( 12.3805, 434.866 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="title_borders"]
position = Vector2( 216.659, 780.972 )
shape = SubResource( 4 )

[node name="ball_kinematic" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 221.655, 747.39 )

[node name="ball_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 66.0
margin_top = 400.0
margin_right = 366.0
margin_bottom = 650.0
theme = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 60.0
alignment = 1

[node name="new_game_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 260.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 220, 60 )
text = "NEW GAME"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/new_game_button"]
visible = false
margin_right = 220.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.533333, 0.752941, 0.439216, 1 )
custom_colors/font_outline_modulate = Color( 0.878431, 0.972549, 0.815686, 1 )
custom_colors/font_color_shadow = Color( 0.203922, 0.407843, 0.337255, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "NEW GAME"
align = 1

[node name="brick_container" type="Node2D" parent="."]

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="gamescreen_label" parent="." instance=ExtResource( 8 )]

[node name="label_tween" type="Tween" parent="."]
[connection signal="timeout" from="ball_timer" to="ball_kinematic" method="_on_ball_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
